Update info page

--- a/cmd/webserver/templates/info.gohtml
+++ b/cmd/webserver/templates/info.gohtml
@@ -123,7 +123,7 @@
                 <div class="card mb-0" id="trending">
                     <h5 class="card-header">Trend Values</h5>
                     <div class="card-body pb-0">
-                        <p>Trend values are calculated using the angle of <a href="">Linear regression</a>. The value is the angle in radians x 1,000. Data is taken from the last 7 days.</p>
+                        <p>Trend values are calculated using the angle of <a href="">Linear regression</a>. The value is the angle in radians x 1,000.</p>
                     </div>
                 </div>
 
