--- a/cmd/webserver/templates/player.gohtml
+++ b/cmd/webserver/templates/player.gohtml
@@ -232,9 +232,11 @@
                                                 </table>
                                             </div>
                                         {{ else }}
-                                            <p>{{ .Player.GetName }} has not been ranked yet, this will start at midnight UTC</p>
-                                            <p class="mb-0">Your profile must be set to public to gather information,
-                                                go <a href="https://steamcommunity.com/my/edit/settings" target="_blank" rel="noopener">here</a> to change your privacy settings.</p>
+                                            <div class="p-3">
+                                                <p>{{ .Player.GetName }} has not been ranked yet, this will start at midnight UTC</p>
+                                                <p class="mb-0">Your profile must be set to public to gather information,
+                                                    go <a href="https://steamcommunity.com/my/edit/settings" target="_blank" rel="noopener">here</a> to change your privacy settings.</p>
+                                            </div>
                                         {{ end }}
                                     </div>
                                 </div>
