Show youtube weekly stats

--- a/cmd/webserver/templates/app.gohtml
+++ b/cmd/webserver/templates/app.gohtml
@@ -364,6 +364,14 @@
                                                 <td>Average Playtime <small>(On Game DB)</small></td>
                                                 <td>{{ .App.GetPlaytimeAverage }}</td>
                                             </tr>
+                                            <tr>
+                                                <td>Max Weekly Youtube Views</td>
+                                                <td id="youtube-max-views"></td>
+                                            </tr>
+                                            <tr>
+                                                <td>Max Weekly Youtube Comments</td>
+                                                <td id="youtube-max-comments"></td>
+                                            </tr>
                                             </tbody>
                                         </table>
                                     </div>
