--- a/cmd/webserver/templates/info.gohtml
+++ b/cmd/webserver/templates/info.gohtml
@@ -43,6 +43,7 @@
                             <li>App twitch counts only include the top 100 streamers for that app.</li>
                             <li>App wishlist counts are updated daily.</li>
                             <li>App trend value, see <a href="#trending">Trend Values</a>.</li>
+                            <li>App YouTube data comes from the top 50 videos each day.</li>
                         </ul>
                     </div>
                 </div>
