--- a/cmd/webserver/templates/players.gohtml
+++ b/cmd/webserver/templates/players.gohtml
@@ -79,21 +79,17 @@
                             <th scope="col" class="thin">#</th>
                             <th scope="col" class="thin">Flag</th>
                             <th scope="col">Player</th>
-
                             <th scope="col">Level</th>
                             <th scope="col">Badges</th>
-
                             <th scope="col">Games</th>
                             <th scope="col">Time</th>
-
                             <th scope="col">Game Bans</th>
                             <th scope="col">VAC Bans</th>
                             <th scope="col">Last VAC Ban</th>
-
                             <th scope="col">Friends</th>
                             <th scope="col">Comments</th>
-
-                            <th scope="col"></th>
+                            <th scope="col"></th> {{ /* Link */ }}
+                            <th scope="col">Achievements</th>
                         </tr>
                         </thead>
                         <tbody>
