--- a/cmd/webserver/templates/home.gohtml
+++ b/cmd/webserver/templates/home.gohtml
@@ -139,10 +139,10 @@
                             <span class="badge cursor-pointer" data-sort="profile">Profile</span>
                         </h5>
                     </div>
-                    <div class="card-body">
+                    <div class="card-body p-0">
 
                         <div class="table-responsive">
-                            <table class="table table-hover table-striped mb-0">
+                            <table class="table no-border table-hover table-striped mb-0">
                                 <thead class="thead-light">
                                 <tr>
                                     <th scope="col" class="thin">Rank</th>
@@ -172,10 +172,10 @@
                             <span class="badge cursor-pointer" data-sort="latest-found">Latest Found</span>
                         </h5>
                     </div>
-                    <div class="card-body">
+                    <div class="card-body p-0">
 
                         <div class="table-responsive">
-                            <table class="table table-hover table-striped mb-0">
+                            <table class="table no-border table-hover table-striped mb-0">
                                 <thead class="thead-light">
                                 <tr>
                                     <th scope="col">Sale</th>
