Put header onto chart card

--- a/cmd/webserver/templates/group.gohtml
+++ b/cmd/webserver/templates/group.gohtml
@@ -41,6 +41,7 @@
                 {{ end }}
 
                 <div class="card mb-4">
+                    <h5 class="card-header">Members</h5>
                     <div class="card-body pb-0">
                         <div id="group-chart"></div>
                     </div>
