--- a/cmd/webserver/templates/_header.gohtml
+++ b/cmd/webserver/templates/_header.gohtml
@@ -143,7 +143,7 @@
 
                             <a class="dropdown-item" href="/games">Games</a>
                             <a class="dropdown-item" href="/games/upcoming">Upcoming</a>
-                            <a class="dropdown-item" href="/games/sales">On Sale</a>
+                            {{/*<a class="dropdown-item" href="/games/sales">On Sale</a>*/}}
                             <a class="dropdown-item" href="/games/new-releases">New Releases</a>
                             <a class="dropdown-item" href="/games/trending">Trending</a>
                             <a class="dropdown-item" href="/games/achievements">Most Achievements</a>
