--- a/cmd/webserver/templates/app.gohtml
+++ b/cmd/webserver/templates/app.gohtml
@@ -342,7 +342,7 @@
                                 <div class="card">
                                     <h5 class="card-header">Stats</h5>
                                     <div class="card-body p-0">
-                                        <table class="table no-border mb-0">
+                                        <table class="table table-no-border mb-0">
                                             <tbody>
                                             <tr>
                                                 <td>Peak All Time</td>
@@ -384,7 +384,7 @@
                                 <div class="card">
                                     <h5 class="card-header">Owners <small class="float-right"><a target="_blank" rel="noopener" href="https://steamspy.com/app/{{ .App.ID }}">By Steam Spy</a></small></h5>
                                     <div class="card-body p-0">
-                                        <table class="table no-border mb-0">
+                                        <table class="table table-no-border mb-0">
                                             <tbody>
                                             <tr>
                                                 <td>Owners</td>
