--- a/cmd/webserver/assets/sass/_tables.scss
+++ b/cmd/webserver/assets/sass/_tables.scss
@@ -15,7 +15,7 @@ table.table.dataTable {
 }
 
 //
-table.table:not(.no-border) {
+table.table:not(.table-no-border) {
 
     border: 1px solid rgba(0, 0, 0, .125); // Taken from cards
     border-radius: 5px;
