--- a/cmd/webserver/templates/home.gohtml
+++ b/cmd/webserver/templates/home.gohtml
@@ -142,7 +142,7 @@
                     <div class="card-body p-0">
 
                         <div class="table-responsive">
-                            <table class="table no-border table-hover table-striped mb-0">
+                            <table class="table table-no-border table-hover table-striped mb-0">
                                 <thead class="thead-light">
                                 <tr>
                                     <th scope="col" class="thin">Rank</th>
@@ -175,7 +175,7 @@
                     <div class="card-body p-0">
 
                         <div class="table-responsive">
-                            <table class="table no-border table-hover table-striped mb-0">
+                            <table class="table table-no-border table-hover table-striped mb-0">
                                 <thead class="thead-light">
                                 <tr>
                                     <th scope="col">Sale</th>
