--- a/cmd/webserver/templates/app.gohtml
+++ b/cmd/webserver/templates/app.gohtml
@@ -667,7 +667,7 @@
                         </div>
 
                         <div class="table-responsive">
-                            <table class="table table-hover table-striped mb-0" data-path="/games/{{ .App.ID }}/news.json" id="news-table">
+                            <table class="table table-hover table-striped mb-0" data-ordering="false" data-path="/games/{{ .App.ID }}/news.json" id="news-table">
                                 <thead class="thead-light">
                                 <tr>
                                     <th scope="col">Title</th>
