--- a/cmd/webserver/assets/sass/_global.scss
+++ b/cmd/webserver/assets/sass/_global.scss
@@ -601,6 +601,7 @@ div.json-hover {
 
     img {
         max-width: 100%;
+        max-height: 300px;
     }
 
     iframe {
@@ -608,22 +609,6 @@ div.json-hover {
         height: 577px;
         border: 0;
     }
-
-    br:first-child, br:last-child {
-        display: none;
-    }
-
-    //p:empty {
-    //    display: none;
-    //}
-
-    //br + br + br {
-    //    display: none;
-    //}
-
-    //p:empty + p:empty + p:empty {
-    //    display: none;
-    //}
 }
 
 //
