--- a/cmd/webserver/templates/player.gohtml
+++ b/cmd/webserver/templates/player.gohtml
@@ -576,7 +576,7 @@
                     <div class="tab-pane" id="achievements" role="tabpanel">
 
                         <div class="table-responsive">
-                            <table class="table table-hover table-striped table-counts mb-0" data-row-type="achievements" data-path="/players/{{ .Player.ID }}/achievements.json" id="achievements-table" data-ordering="false">
+                            <table class="table table-hover table-striped table-counts mb-0" data-row-type="achievements" data-path="/players/{{ .Player.ID }}/achievements.json" id="achievements-table">
                                 <thead class="thead-light">
                                 <tr>
                                     <th scope="col">Achievement</th>
