Add youtube charts

--- a/cmd/webserver/assets/sass/_app.scss
+++ b/cmd/webserver/assets/sass/_app.scss
@@ -47,7 +47,7 @@
 
     #players {
 
-        #group-chart, #players-chart, #players-chart2, #wishlists-chart, #youtube-chart {
+        .player-chart {
             height: 300px;
         }
     }
