--- a/cmd/webserver/templates/app.gohtml
+++ b/cmd/webserver/templates/app.gohtml
@@ -365,14 +365,6 @@
                                                 <td>Average Playtime <small>(On Game DB)</small></td>
                                                 <td>{{ .App.GetPlaytimeAverage }}</td>
                                             </tr>
-                                            <tr>
-                                                <td>Max Weekly Youtube Views</td>
-                                                <td id="youtube-max-views"></td>
-                                            </tr>
-                                            <tr>
-                                                <td>Max Weekly Youtube Comments</td>
-                                                <td id="youtube-max-comments"></td>
-                                            </tr>
                                             </tbody>
                                         </table>
                                     </div>
@@ -418,7 +410,7 @@
                         <div class="card mb-4">
                             <h5 class="card-header">Player Count - 1 Week</h5>
                             <div class="card-body pb-0">
-                                <div id="players-chart">
+                                <div class="player-chart" id="players-chart">
                                     <i class="fas fa-spinner fa-spin"></i>
                                 </div>
                             </div>
@@ -427,7 +419,24 @@
                         <div class="card mb-4">
                             <h5 class="card-header">Player Count</h5>
                             <div class="card-body pb-0">
-                                <div id="players-chart2">
+                                <div class="player-chart" id="players-chart2">
+                                    <i class="fas fa-spinner fa-spin"></i>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="card mb-4">
+                            <h5 class="card-header cursor-pointer" data-toggle="collapse" data-target="#bans-collapse">
+                                <span>YouTube</span>
+                                <small class="float-right">Click to display</small>
+                            </h5>
+                            <div class="card-body collapse pb-0" id="bans-collapse">
+
+                                <div class="player-chart" id="youtube-comments-chart">
+                                    <i class="fas fa-spinner fa-spin"></i>
+                                </div>
+
+                                <div class="player-chart" id="youtube-views-chart">
                                     <i class="fas fa-spinner fa-spin"></i>
                                 </div>
                             </div>
@@ -438,7 +447,7 @@
                             <div class="card mb-4">
                                 <h5 class="card-header" id="followers">Followers</h5>
                                 <div class="card-body pb-0">
-                                    <div id="group-chart">
+                                    <div class="player-chart" id="group-chart">
                                         <i class="fas fa-spinner fa-spin"></i>
                                     </div>
                                 </div>
@@ -449,7 +458,7 @@
                         <div class="card mb-4">
                             <h5 class="card-header">Wishlists</h5>
                             <div class="card-body pb-0">
-                                <div id="wishlists-chart">
+                                <div class="player-chart" id="wishlists-chart">
                                     <i class="fas fa-spinner fa-spin"></i>
                                 </div>
                             </div>
