--- a/cmd/webserver/templates/players.gohtml
+++ b/cmd/webserver/templates/players.gohtml
@@ -36,7 +36,7 @@
                 <div class="row">
                     <div class="col-sm-6 col-md-4">
                         <div class="form-group">
-                            <label for="country">Country <small>(* has states)</small></label>
+                            <label for="country">Continent / Country</label>
                             <select class="form-control form-control-chosen" id="country" name="country">
                                 <option value="">Any</option>
                                 <optgroup label="Continents">
