Fix app nav icons

--- a/cmd/webserver/templates/_apps_header.gohtml
+++ b/cmd/webserver/templates/_apps_header.gohtml
@@ -19,44 +19,44 @@
             </li>
             <li class="nav-item">
                 {{if endsWith .Path "/upcoming" }}
-                    <span class="nav-link active" role="tab"><i class="fas fa-gamepad"></i> Upcoming</span>
+                    <span class="nav-link active" role="tab"><i class="fas fa-hourglass-start"></i> Upcoming</span>
                 {{else}}
-                    <a class="nav-link" href="/games/upcoming" role="tab"><i class="fas fa-gamepad"></i> Upcoming</a>
+                    <a class="nav-link" href="/games/upcoming" role="tab"><i class="fas fa-hourglass-start"></i> Upcoming</a>
                 {{end}}
             </li>
             {{/*            <li class="nav-item">*/}}
             {{/*                {{if endsWith .Path "/sales" }}*/}}
-            {{/*                    <span class="nav-link active" role="tab"><i class="fas fa-gamepad"></i> Sales</span>*/}}
+            {{/*                    <span class="nav-link active" role="tab"><i class="fas fa-piggy-bank"></i> Sales</span>*/}}
             {{/*                {{else}}*/}}
-            {{/*                    <a class="nav-link" href="/games/sales" role="tab"><i class="fas fa-gamepad"></i> Sales</a>*/}}
+            {{/*                    <a class="nav-link" href="/games/sales" role="tab"><i class="fas fa-piggy-bank"></i> Sales</a>*/}}
             {{/*                {{end}}*/}}
             {{/*            </li>*/}}
             <li class="nav-item">
                 {{if endsWith .Path "/new-releases" }}
-                    <span class="nav-link active" role="tab"><i class="fas fa-gamepad"></i> New Releases</span>
+                    <span class="nav-link active" role="tab"><i class="fas fa-hourglass-end"></i> New Releases</span>
                 {{else}}
-                    <a class="nav-link" href="/games/new-releases" role="tab"><i class="fas fa-gamepad"></i> New Releases</a>
+                    <a class="nav-link" href="/games/new-releases" role="tab"><i class="fas fa-hourglass-end"></i> New Releases</a>
                 {{end}}
             </li>
             <li class="nav-item">
                 {{if endsWith .Path "/games/trending" }}
-                    <span class="nav-link active" role="tab"><i class="fas fa-gamepad"></i> Trending</span>
+                    <span class="nav-link active" role="tab"><i class="fas fa-poll"></i> Trending</span>
                 {{else}}
-                    <a class="nav-link" href="/games/trending" role="tab"><i class="fas fa-gamepad"></i> Trending</a>
+                    <a class="nav-link" href="/games/trending" role="tab"><i class="fas fa-poll"></i> Trending</a>
                 {{end}}
             </li>
             <li class="nav-item">
                 {{if endsWith .Path "/games/achievements" }}
-                    <span class="nav-link active" role="tab"><i class="fas fa-gamepad"></i> Achievements</span>
+                    <span class="nav-link active" role="tab"><i class="fas fa-trophy"></i> Achievements</span>
                 {{else}}
-                    <a class="nav-link" href="/games/achievements" role="tab"><i class="fas fa-gamepad"></i> Achievements</a>
+                    <a class="nav-link" href="/games/achievements" role="tab"><i class="fas fa-trophy"></i> Achievements</a>
                 {{end}}
             </li>
             <li class="nav-item">
                 {{if endsWith .Path "/games/wishlists" }}
-                    <span class="nav-link active" role="tab"><i class="fas fa-gamepad"></i> Wishlists</span>
+                    <span class="nav-link active" role="tab"><i class="fas fa-star"></i> Wishlists</span>
                 {{else}}
-                    <a class="nav-link" href="/games/wishlists" role="tab"><i class="fas fa-gamepad"></i> Wishlists</a>
+                    <a class="nav-link" href="/games/wishlists" role="tab"><i class="fas fa-star"></i> Wishlists</a>
                 {{end}}
             </li>
 
