--- a/cmd/webserver/templates/app.gohtml
+++ b/cmd/webserver/templates/app.gohtml
@@ -483,7 +483,7 @@
                             <div class="col-12 col-md-6 col-lg-5 col-xl-4 mb-2">
                                 <div class="form-group">
                                     <label for="dlc-search">Search</label>
-                                    <input name="search" type="search" class="form-control" id="dlc-search">
+                                    <input name="search" type="search" class="form-control" id="dlc-search" placeholder="DLC Name">
                                 </div>
                             </div>
                         </div>
@@ -662,7 +662,7 @@
                             <div class="col-12 col-md-6 col-lg-5 col-xl-4 mb-2">
                                 <div class="form-group">
                                     <label for="article-search">Search</label>
-                                    <input name="search" type="search" class="form-control" id="article-search">
+                                    <input name="search" type="search" class="form-control" id="article-search" placeholder="Article Name">
                                 </div>
                             </div>
                         </div>
@@ -690,7 +690,7 @@
                             <div class="col-12 col-md-6 col-lg-5 col-xl-4 mb-2">
                                 <div class="form-group">
                                     <label for="items-search">Search</label>
-                                    <input name="search" type="search" class="form-control" id="items-search">
+                                    <input name="search" type="search" class="form-control" id="items-search" placeholder="Item Name">
                                 </div>
                             </div>
                         </div>
