Update app tags and links

--- a/cmd/webserver/assets/sass/_app.scss
+++ b/cmd/webserver/assets/sass/_app.scss
@@ -13,6 +13,10 @@
                 padding-left: 4px;
             }
 
+            div:last-child {
+                margin-bottom: 0;
+            }
+
             .float-left {
                 font-size: 0.85rem;
             }
