--- a/cmd/webserver/templates/new_releases.gohtml
+++ b/cmd/webserver/templates/new_releases.gohtml
@@ -33,16 +33,10 @@
             {{ template "_apps_header" . }}
             <div class="card-body">
 
+                <label for="days">Number of days to look back</label>
                 <div class="row">
-                    <div class="d-none">
-                        {{/* This div is so Chrome auto-fills this one and not the rest! */}}
-                        <label for="hidden">Hidden</label>
-                        <select multiple data-placeholder="Hidden" class="form-control form-control-chosen" id="hidden" name="hidden">
-                        </select>
-                    </div>
-                    <div class="col-sm-6 col-lg-4">
+                    <div class="col-6 col-md-4 col-lg-3">
                         <div class="form-group">
-                            <label for="days">Number of days to look back</label>
                             <input class="form-control" type="number" id="days" name="days" value="{{ .Days }}" min="1" max="30">
                         </div>
                     </div>
