Add link to random game

--- a/cmd/webserver/templates/player.gohtml
+++ b/cmd/webserver/templates/player.gohtml
@@ -388,6 +388,8 @@
                             </div>
                         {{ end }}
 
+                        <a class="float-right" href="/games/random">Looking for a random game to play?</a>
+
                         <div class="form-row">
                             <div class="col-12 col-md-6 col-lg-5 col-xl-4 mb-2">
                                 <div class="form-group">
