--- a/cmd/webserver/templates/player.gohtml
+++ b/cmd/webserver/templates/player.gohtml
@@ -528,6 +528,14 @@
                     {{/* Wishlist */}}
                     <div class="tab-pane" id="wishlist" role="tabpanel">
 
+                        <div class="row">
+                            <div class="col-6 col-md-4 col-lg-3 mb-3">
+                                <div role="button" class="btn btn-success btn-block mb-0">Total Cost<br/>
+                                    <strong>{{ .Player.GetWishlistTotal .UserProductCC.ProductCode }}</strong>
+                                </div>
+                            </div>
+                        </div>
+
                         <div class="table-responsive">
                             <table class="table table-hover table-striped table-counts mb-0" data-row-type="games" data-path="/players/{{ .Player.ID }}/wishlist.json" data-order='[[0, "asc"]]' id="wishlist-table">
                                 <thead class="thead-light">
